classic/app/bankwiz/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankwiz-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://app-bankwiz-dev.bytedragon.tech, http://localhost:5174, http://localhost:5173, http://localhost:4174, http://localhost:4173"
spec:
  ingressClassName : "nginx"
  rules:
    - host: placeholder.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bankwiz-service
                port:
                  number: 9595
